<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.CreatePollActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:id="@+id/create_poll_parent"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:id="@+id/create_poll"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:orientation="vertical">

                <EditText
                    android:id="@+id/title"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="15dp"
                    android:backgroundTint="#33ffffff"
                    android:ems="10"
                    android:fontFamily="@font/josefin_regular"
                    android:hint="@string/hint_poll_title"
                    android:inputType="text"
                    android:textColor="@android:color/white"
                    android:textColorHint="@android:color/white" />

                <EditText
                    android:id="@+id/description"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="15dp"
                    android:backgroundTint="#33ffffff"
                    android:ems="10"
                    android:fontFamily="@font/josefin_regular"
                    android:hint="@string/hint_poll_description"
                    android:inputType="textMultiLine"
                    android:maxLines="5"
                    android:minLines="2"
                    android:textColor="@android:color/white"
                    android:textColorHint="@android:color/white" />

                <EditText
                    android:id="@+id/start_date"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="15dp"
                    android:backgroundTint="#33ffffff"
                    android:clickable="true"
                    android:editable="false"
                    android:ems="10"
                    android:focusable="false"
                    android:fontFamily="@font/josefin_regular"
                    android:hint="@string/hint_poll_creation_date"
                    android:inputType="datetime"
                    android:textColor="@android:color/white"
                    android:textColorHint="@android:color/white" />

                <EditText
                    android:id="@+id/end_date"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="15dp"
                    android:backgroundTint="#33ffffff"
                    android:clickable="true"
                    android:editable="false"
                    android:ems="10"
                    android:focusable="false"
                    android:fontFamily="@font/josefin_regular"
                    android:hint="@string/hint_poll_end_date"
                    android:inputType="datetime"
                    android:textColor="@android:color/white"
                    android:textColorHint="@android:color/white" />

                <CheckBox
                    android:id="@+id/is_location_specific"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="15dp"
                    android:buttonTint="@color/WHITE"
                    android:ems="10"
                    android:fontFamily="@font/josefin_regular"
                    android:text="@string/hint_poll_location_specific"
                    android:textColor="@color/WHITE"
                    android:textSize="18sp"
                    android:textStyle="bold" />

                <Spinner
                    android:id="@+id/location"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="15dp"
                    android:backgroundTint="@color/WHITE"
                    android:entries="@array/india_states"
                    android:popupBackground="@android:color/white"
                    android:scrollbars="none"
                    android:spinnerMode="dropdown"
                    android:visibility="gone" />

                <Button
                    android:id="@+id/create_poll_button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:background="@drawable/button_background"
                    android:fontFamily="@font/josefin_bold"
                    android:padding="5dp"
                    android:text="@string/btn_create_poll"
                    android:textColor="@android:color/white"
                    android:textSize="20sp" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/candidate_details"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:orientation="vertical"
                android:visibility="gone">

                <TextView
                    android:id="@+id/candidate_no"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp"
                    android:ems="10"
                    android:fontFamily="@font/josefin_regular"
                    android:text="Add Candidate Number"
                    android:textColor="@color/WHITE"
                    android:textSize="18sp"
                    android:textStyle="bold" />

                <EditText
                    android:id="@+id/candidate_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="15dp"
                    android:backgroundTint="#33ffffff"
                    android:ems="10"
                    android:fontFamily="@font/josefin_regular"
                    android:hint="@string/hint_candidate_name"
                    android:inputType="text"
                    android:textColor="@android:color/white"
                    android:textColorHint="@android:color/white" />

                <EditText
                    android:id="@+id/party_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="15dp"
                    android:backgroundTint="#33ffffff"
                    android:ems="10"
                    android:fontFamily="@font/josefin_regular"
                    android:hint="@string/hint_candidate_party_name"
                    android:inputType="text"
                    android:textColor="@android:color/white"
                    android:textColorHint="@android:color/white" />

                <EditText
                    android:id="@+id/candidate_dob"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="15dp"
                    android:backgroundTint="#33ffffff"
                    android:clickable="true"
                    android:editable="false"
                    android:ems="10"
                    android:focusable="false"
                    android:fontFamily="@font/josefin_regular"
                    android:hint="@string/hint_candidate_dob"
                    android:inputType="text"
                    android:textColor="@android:color/white"
                    android:textColorHint="@android:color/white" />

                <EditText
                    android:id="@+id/candidate_location"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="15dp"
                    android:backgroundTint="#33ffffff"
                    android:ems="10"
                    android:fontFamily="@font/josefin_regular"
                    android:hint="@string/hint_candidate_location"
                    android:inputType="text"
                    android:textColor="@android:color/white"
                    android:textColorHint="@android:color/white" />

                <EditText
                    android:id="@+id/candidate_occupation"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="15dp"
                    android:backgroundTint="#33ffffff"
                    android:ems="10"
                    android:fontFamily="@font/josefin_regular"
                    android:hint="@string/hint_candidate_occupation"
                    android:inputType="text"
                    android:textColor="@android:color/white"
                    android:textColorHint="@android:color/white" />

                <LinearLayout
                    android:id="@+id/gender_box"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/password2">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_margin="5dp"
                        android:ems="10"
                        android:fontFamily="@font/josefin_regular"
                        android:text="@string/hint_candidate_gender"
                        android:textColor="@color/WHITE"
                        android:textSize="18sp"
                        android:textStyle="bold" />

                    <RadioGroup
                        android:id="@+id/radioGrp"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">

                        <RadioButton
                            android:id="@+id/radioM"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_gravity="left"
                            android:layout_weight="1"
                            android:backgroundTint="#33ffffff"
                            android:buttonTint="@color/WHITE"
                            android:checked="true"
                            android:ems="10"
                            android:fontFamily="@font/josefin_regular"
                            android:text="Male"
                            android:textColor="@android:color/white"
                            android:textColorHint="@android:color/white"
                            android:textSize="14dp" />

                        <RadioButton
                            android:id="@+id/radioF"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_gravity="right"
                            android:layout_weight="1"
                            android:backgroundTint="#33ffffff"
                            android:buttonTint="@color/WHITE"
                            android:checked="false"
                            android:ems="10"
                            android:fontFamily="@font/josefin_regular"
                            android:text="Female"
                            android:textColor="@android:color/white"
                            android:textColorHint="@android:color/white"
                            android:textSize="14dp" />

                        <RadioButton
                            android:id="@+id/radioT"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_gravity="right"
                            android:layout_weight="1"
                            android:backgroundTint="#33ffffff"
                            android:buttonTint="@color/WHITE"
                            android:checked="false"
                            android:ems="10"
                            android:fontFamily="@font/josefin_regular"
                            android:text="Other"
                            android:textColor="@android:color/white"
                            android:textColorHint="@android:color/white"
                            android:textSize="14dp" />
                    </RadioGroup>

                    <Button
                        android:id="@+id/add_candidate_btn"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="20dp"
                        android:background="@drawable/button_background"
                        android:fontFamily="@font/josefin_bold"
                        android:padding="5dp"
                        android:text="@string/btn_add_candidate"
                        android:textColor="@android:color/white"
                        android:textSize="20sp" />
                </LinearLayout>

            </LinearLayout>

        </LinearLayout>

    </ScrollView>

    <Button
        android:id="@+id/finish"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="16dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="10dp"
        android:background="@drawable/button_background"
        android:fontFamily="@font/josefin_bold"
        android:padding="10dp"
        android:text="Finish"
        android:textColor="@android:color/white"
        android:textSize="20sp"
        android:visibility="invisible" />

</RelativeLayout>